# monitoring-client

./: .bandits.yaml  .gitignore  .pre-commit-config.yaml  Dockerfile.centos7  README.md  pyproject.toml  python-tests.yml  requirements.txt  setup.py  test_metrics.py
.build-pyinstaller/pyinstaller/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.pyz  PYZ-00.toc  warn-pyinstaller.txt  xref-pyinstaller.html
config/: config.defaults.yaml  config.schema.json  config.yaml  config.yaml.example
data/: api_key  fingerprint
packaging/: README.md
packaging/common/: config.defaults.yaml  functions.sh
packaging/systemd/: monitoring-client.service.legacy  monitoring-client.service.modern  monitoring-client.timer
scripts/: TROUBLESHOOTING-PERMISSIONS.md  build.sh  check-perms.sh  check_version.sh  deb_build.sh  docker-build-rpm.sh  install.sh  make.sh  package.sh  release.sh  rpm_build.sh  sync_version.sh  test-complete.sh
src/: __version__.py  main.py
src/collectors/: base_collector.py  loader.py
src/core/: api_client.py  config_loader.py  fingerprint.py  logger.py
src/monitoring_client/: __init__.py  __version__.py  main.py
src/pipeline/: aggregator.py  transformer.py  validator.py
src/vendors/: executor.py  parser.py  validator.py
tests/fixtures/: sample_vendor_ok.yaml
tests/integration/: test_cli_dry_run.py  test_pipeline_end_to_end.py  test_vendor_bash_end_to_end.py
tests/unit/: test_aggregator.py  test_api_client.py  test_config_loader.py  test_fingerprint.py  test_payload_validator.py  (+3 more)
vendors/: demo_bash.yaml.disabled  example_nginx.yaml
(+40 files in other folders)
